--- a/html_advanced/5-index.html
+++ b/html_advanced/5-index.html
@@ -9,14 +9,10 @@
     <link rel="icon" type="image/png" href="./favicon.png">
 <body>
     <header></header>
-    <main>Main content
+    <main>
         <section>Hero section</section>
         <section>Services section</section>
-        <section>Works section
-            <article>Work 1</article>
-            <article>Work 2</article>
-            <article>Work 3</article>
-        </section>
+        <section>Works section</section>
         <section>About section</section>
         <section>Latest news section</section>
         <section>Testimonials section</section>
