--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -12,10 +12,23 @@
     <main>Main content
         <section>Hero section</section>
         <section>Services section</section>
-        <section>Works section</section>
+        <section>Works section
+		<article>work 1<article/>
+		<article>work 1<article/>		
+		<article>work 1<article/>
+	</section>
         <section>About section</section>
-        <section>Latest news section</section>
-        <section>Testimonials section</section>
+        <section>Latest news section
+		<article><article/>		
+		<article><article/>
+		<article><article/>		
+	</section>
+        <section>
+		Testimonials section
+		<article>Testimonial<article/>		
+		<article>Testimonial<article/>		
+		<article>Testimonial<article/>
+	</section>
         <section>Contact section</section>
     </main>
     <footer>Footer</footer>
