--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -8,28 +8,28 @@
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="icon" type="image/png" href="./favicon.png">
 <body>
-    <header></header>
-    <main>Main content
+    <header>Header</header>
+    <main>
         <section>Hero section</section>
         <section>Services section</section>
         <section>
 		Works section
-		<article>work 1<article/>
-		<article>work 2<article/>		
-		<article>work 3<article/>
+		<article>work 1</article>
+		<article>work 2</article>		
+		<article>work 3</article>
 	</section>
         <section>About section</section>
         <section>
-		Latest news section
-		<article>Article 1<article/>		
-		<article>Article 2<article/>
-		<article>Article 3<article/>		
+		Laitest news section
+		<article>Article 1</article>		
+		<article>Article 2</article>
+		<article>Article 3</article>		
 	</section>
         <section>
 		Testimonials section
-		<article>Testimonial 1<article/>		
-		<article>Testimonial 2<article/>		
-		<article>Testimonial 3<article/>
+		<article>Testimonial 1</article>		
+		<article>Testimonial 2</article>		
+		<article>Testimonial 3</article>
 	</section>
         <section>Contact section</section>
     </main>
