--- a/html_advanced/10-index.html
+++ b/html_advanced/10-index.html
@@ -29,7 +29,7 @@
 		<h2>Works
         </h2>
 		<article>
-            <h3>Interior</h3>
+            <h3>Interior Design</h3>
         </article>
 		<article>
             <h3>Web Design</h3>
