--- a/html_advanced/10-index.html
+++ b/html_advanced/10-index.html
@@ -32,7 +32,7 @@
             <h3>Interior Design</h3>
         </article>
 		<article>
-            <h3>Web Design</h3>
+            <h3>Web Development</h3>
         </article>		
 		<article>
             <h3>Personal brand</h3>
