--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -45,35 +45,35 @@
             <h3>Who are we</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
             <h3>Our culture</h3>
-            <p> ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
             <h3>How we work</h3>
-            <p> ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
         </section>
         <section>
 		<h2>Latest news</h2>
 		<article>
-            <h3>Hoc loco tenere se Triarius non potuit.</h3>
             <p>Career</p>
+            <h3>Hoc loco tenere se Triarius non potuit.</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
         </article>		
 		<article>
-            <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
             <p>Digital Life</p>
+            <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
         </article>
 		<article>
-            <h3>Bestiarum vero nullum iudicium puto.</h3>
             <p>Social</p>
+            <h3>Bestiarum vero nullum iudicium puto.</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
         </article>		
-	</section>
+	    </section>
         <section>
 		<h2>Testimonials</h2>
         <p>We are more than a digital company</p>
 		<article>Testimonial 1</article>		
 		<article>Testimonial 2</article>		
 		<article>Testimonial 3</article>
-	</section>
+	    </section>
         <section>
             <h2>Contact</h2>
             <p>We like to know new people</p>
