--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Techium is a digital agency">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="icon" type="image/png" href="./favicon.png">
+</head>
 <body>
 	<header>
 		<nav></nav>
@@ -19,12 +20,12 @@
         <section>
             <h2>Services</h2>
             <p>we work with you</p>
-                <h3>Design & Concept</h3>
-                <h3>Digital Strategy</h3>
-                <h3>Content Strategy</h3>
-                <h3>UX Design</h3>
-                <h3>Web Development</h3>
-                <h3>Social Media</h3>
+            <h3>Design & Concept</h3>
+            <h3>Digital Strategy</h3>
+            <h3>Content Strategy</h3>
+            <h3>UX Design</h3>
+            <h3>Web Development</h3>
+            <h3>Social Media</h3>
         </section>
         <section>
 		<h2>Works</h2>
@@ -50,29 +51,29 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
         </section>
         <section>
-		<h2>Latest news</h2>
-		<article>
-            <p>Career</p>
-            <h3>Hoc loco tenere se Triarius non potuit.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
-        </article>		
-		<article>
-            <p>Digital Life</p>
-            <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
-        </article>
-		<article>
-            <p>Social</p>
-            <h3>Bestiarum vero nullum iudicium puto.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones</p>
-        </article>		
+		    <h2>Latest news</h2>
+		    <article>
+                <p>Career</p>
+                <h3>Hoc loco tenere se Triarius non potuit.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
+            </article>		
+		    <article>
+                <p>Digital Life</p>
+                <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
+            </article>
+		    <article>
+                <p>Social</p>
+                <h3>Bestiarum vero nullum iudicium puto.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones</p>
+            </article>		
 	    </section>
         <section>
-		<h2>Testimonials</h2>
-        <p>We are more than a digital company</p>
-		<article>Testimonial 1</article>		
-		<article>Testimonial 2</article>		
-		<article>Testimonial 3</article>
+		    <h2>Testimonials</h2>
+            <p>We are more than a digital company</p>
+		    <article>Testimonial 1</article>		
+		    <article>Testimonial 2</article>		
+		    <article>Testimonial 3</article>
 	    </section>
         <section>
             <h2>Contact</h2>
